--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,4 @@ face:
   routeSqlite: C:\Users\Z259151\Repositorios\MIS_PROYECTOS\redbiopersona\face.db
 persistence-service:
   enroll: http://localhost:8085/persistence/enroll
+  delete: http://localhost:8085/persistence/delete
